# mimuw-assignments

./: CMakeLists.txt  Graph-template.hs  Graph.hs  Leetcode.cpp  README.md  Set-template.hs  Set.hs  angular.json  backup.sh  build.gradle.kts  db.sqlite3  docker-compose.yml  err.h  executor.c  hash.cc  hash.h  input.in  inputs.in  kvfifo.h  kvfifo_example.cc  kwasow.h  main.cc  makefile  manage.py  moneybag.h  moneybag_example.cc  napotem.txt  package-lock.json  package.json  pom.xml  rational.cc  run.sh  sender_utility.h  server.py  sikradio-receiver.c  sikradio-receiver.cpp  sikradio-sender.c  sikradio-sender.cpp  solve.pl  solve.py  (+9 more)
AlgoTemplates/: FindUnion.cpp  NearestNeighbour.cpp  Splay.cpp  Tests.cpp
BajtTrade/: pom.xml  uruchom.sh
Codeforces/: makro.cpp
Labirynt/: bit_operations.h  labyrinth_utility.h  main.c  queue.h  szybciorem.sh  test.sh
Laby/: Choinka.cpp  Dynamiczny.cpp  Inwersje.cpp  Kapitan.cpp  Odwracanie.cpp  Park.cpp  Propaganda.cpp
Przekierowywanie/: CMakeLists.txt  Doxyfile.in  test.sh
Templates/: lazy.cpp
asd/: README.md
asm1/: inverse_permutation_example.c  run.sh
asm2/: example.c  run.sh  test.c
awww/: asgi.py  settings.py  urls.py
backend/: pom.xml
blitz/: blitz-task-description.md
bsk/: README.md
compiler/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
crypto/: README.md  solve.py  utils.py
db/: README.md
ds/: README.md
executor/: CMakeLists.txt  executor.c
frontend/: angular.json
haskell/: Set.hs
input/: input.in
ipp/: README.md
irio/: README.md
jao/: README.md  jao_1.tex  jao_2.tex  jao_3.tex  (+1 more)
(+1105 files in other folders)
